--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "guzzle/http" : "3.8.*@dev"
     },
     "require-dev" : {
-        "guzzle/guzzle": "4.0.0",
+        "guzzle/guzzle": "v3.8.1",
         "psr/log": "1.0.*",
         "satooshi/php-coveralls": "0.6.*@dev"
     }
