--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,19 @@
             "OpenCloud": ["lib/", "tests/"]
         }
     },
+    "repositories": [
+        {
+            "type":"vcs",
+            "url":"git@github.com:A24Group/guzzle.git"
+        }
+    ],
     "require": {
         "php" : ">=5.3.3",
         "guzzle/http" : "3.8.*@dev"
     },
     "require-dev" : {
         "symfony/event-dispatcher": "v3.4.44",
-        "guzzle/guzzle": "v3.8.1",
+        "a24group/guzzle": "v3.8.1",
         "psr/log": "1.0.*",
         "satooshi/php-coveralls": "0.6.*@dev"
     }
