--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     },
     "require-dev" : {
         "symfony/event-dispatcher": "v3.4.44",
-        "a24group/guzzle": "v3.8.1",
+        "a24group/guzzle": "dev-feature-php8-upgrade",
         "psr/log": "1.0.*",
         "satooshi/php-coveralls": "0.6.*@dev"
     }
